--- a/style.css
+++ b/style.css
@@ -31,3 +31,47 @@ body {
 .header-logo img {
     max-height: 60px;
 }
+
+/* 
+dropdown css start here */
+
+#menuDrawer {
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-in-out;
+}
+#menuDrawer.active {
+    transform: translateX(0);
+}
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: #051744;
+    min-width: 160px;
+    /* box-shadow: 0px 8px 16px 0px #FFA500; */
+    box-shadow: 0px 8px 16px 0px #1d4ed8;
+    z-index: 1;
+}
+.dropdown-menu a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-menu a:hover {
+    /* background-color: #FFA500; */
+    background-color: #1d4ed8;
+}
+.submenu {
+    position: absolute;
+    left: 100%;
+    top: 0;
+    background-color: #051744;
+    display: none;
+    min-width: 160px;
+}
+.dropdown-menu .dropdown:hover .submenu {
+    display: block;
+}
