added main products and best experties section

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ dropdown css start here */
 /* carousel css end here */
 
 .expertise-bg {
-    background-image: url('bf.jpg');
+    background-image: url('image/handsake.jpg');
     background-size: cover;
     /* background-position: center; */
 }
@@ -154,7 +154,7 @@ dropdown css start here */
 }
 
 .valued-client-section {
-    background-image: url('bf.jpg');
+    background-image: url('image/handsake.jpg');
     background-size: cover;
     background-position: center;
 }
