--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ body {
 
 .header-logo img {
     /* max-height: 60px; */
-    max-height: 100px;
+    /* max-height: 100px; */
+    max-height: 120px;
     
 }
 
