--- a/style.css
+++ b/style.css
@@ -33,6 +33,13 @@ body {
     /* max-height: 100px; */
     max-height: 120px;
     
+    
+}
+.sourcing{
+    font-size: larger;
+   margin-top: 10px;
+   
+    
 }
 
 /* 
